# Agentic-Operational-Intelligence-Platform

./: .dockerignore  .gitignore  Makefile  README.md  compose.yaml  pyproject.toml
.github/workflows/: ci.yml
ai_layer/: context.py  experimentation.py  guardrails.py  llm.py  model_router.py  prompts.py  structured_output.py  tool_calling.py
ai_layer/agents/: anomaly_agent.py  kpi_agent.py  orchestrator.py  promotion_agent.py  recommendation_agent.py
ai_layer/memory/: persistent_memory.py  session_store.py
ai_layer/orchestration/: __init__.py  dag.py  executor.py  router.py
ai_layer/skills/: __init__.py  catalog.py  registry.py
ai_system/.data/: session_memory.db
ai_system/agents/: recommendation_agent.py
ai_system/alerting/: threshold_config.py
ai_system/core/: guardrails.py  prompts.py  structured_output.py
ai_system/experimentation/: manager.py
ai_system/orchestration/: dag.py  router.py
ai_system/retrieval/: hybrid_search.py  memory.py
ai_system/tools/: alert_tool.py
ai_systems/: __init__.py  skills.py
ai_systems/agents/: __init__.py  anomaly_agent.py  kpi_agent.py  promotion_agent.py  recommendation_agent.py
ai_systems/alerting/: engine.py  threshold_config.py
ai_systems/config/: __init__.py  settings.py  source_connections.example.yaml
ai_systems/core/: __init__.py  llm.py  prompts.py  structured_output.py
ai_systems/experimentation/: __init__.py  manager.py
ai_systems/orchestration/: __init__.py  executor.py  orchestrator.py  router.py
ai_systems/retrieval/: memory.py
ai_systems/tools/: __init__.py  alert_tool.py  calling.py  catalog.py  registry.py
ai_systems/webui/: streamlit_app.py
alerts/: engine.py  threshold_config.py
alerts/channels/: teams.py
alerts/rules/: kpi_thresholds.yaml
apps/copilot_ui/: README.md
architecture/docs/: kpi_definitions.md  system_overview.md
config/: settings.py  source_connections.example.yaml
container/: .dockerignore  Dockerfile  docker-compose.yaml
container/airflow/: Dockerfile  requirements.txt
container/feature-store/: Dockerfile
container/flink/: Dockerfile  pom.xml
container/kafka-connect/: Dockerfile
container/observability/: alerts.yml  blackbox.yml  prometheus.yml
container/scripts/: register_cdc_connector.py  register_connectors.py  register_schemas.py
container/streamlit-ui/: Dockerfile
container/vector-index/: Dockerfile
data_platform/: __init__.py  kpi_catalog.yaml  kpi_store.py  semantic_layer.py
data_platform/dbt/: .user.yml  dbt_project.yml  package-lock.yml  packages.yml  profiles.yml
data_platform/ddl/: 00_database.sql  01_dimensions.sql  02_reference.sql  03_customer.sql  04_sales.sql  05_operations.sql  06_labour.sql  07_security.sql
data_platform/feature_store/: feature_store.yaml  features.py  materialize.py
data_platform/flink_job/: start_flink_job.sh  start_flink_job_all.py
data_platform/graph/: __init__.py  sync_gold_kpis.py  sync_relationships.py
data_platform/producer/: __init__.py  base.py  fake.py  main.py
data_platform/schema/: kronos.crewtime.avsc  kronos.employee.avsc  kronos.hours.avsc  kronos.site.avsc  (+11 more)
docs/: architecture-ai-systems.md  architecture-amazon-eks.md  architecture-data-platform.md  architecture-local.md  architecture-observability.md  architecture.md  architecture_ai_systems.md  architecture_amazon_eks.md  architecture_data_platform.md  architecture_local.md  architecture_observability.md  cicd-automation.md  cicd_automation.md  copilot-ui.md  frameworks-and-design-patterns.md  frameworks_and_design_patterns.md  kpi-definitions.md  kpi_definitions.md  markdown-structure-standard.md  runbook.md  system-overview.md  system_overview.md  terminology-glossary.md
observability/: __init__.py  evaluation.py  logging_config.py  tracing.py
services/: mcp_server.py
tests/: __init__.py  conftest.py  test_ai_gaps.py  test_alert_tool.py  test_api.py  test_data_layer.py  test_gaps_16_20.py  test_hybrid_search.py  test_kpi_aggregator.py  test_orchestration.py  test_orchestrator.py  test_promotion_agent.py  test_significant_gaps.py
(+282 files in other folders)
