[project]
name = "agentic-operational-intelligence-platform"
version = "0.1.0"
description = "Agentic Operational Intelligence Platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.49.0",
    "fastapi==0.111.0",
    "uvicorn[standard]==0.30.1",
    "pydantic==2.7.4",
    "pydantic-settings>=2.3.0",
    "pyyaml==6.0.1",
    "scikit-learn==1.5.0",
]

[dependency-groups]
dev = [
    "pytest==8.2.2",
]

[tool.uv]
package = false