[project]
name = "agentic-operational-intelligence-platform"
version = "0.1.0"
description = "Agentic Operational Intelligence Platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.49.0",
    "fastapi==0.111.0",
    "uvicorn[standard]==0.30.1",
    "pydantic==2.7.4",
    "pydantic-settings>=2.3.0",
    "pyyaml==6.0.1",
    "scikit-learn>=1.5.2",
    "numpy>=1.26.0",
    "chromadb>=1.5.9",
    "sse-starlette>=3.0.3",
    "mcp>=1.10.1",
    "httpx>=0.27.0",
    "redis>=5.0.0",
    "prometheus-client>=0.20.0",
    "neo4j>=5.23.0",
    "pymysql>=1.1.1",
    "pyhive[hive]>=0.7.0",
]

[dependency-groups]
dev = [
    "pytest==8.2.2",
    "pytest-cov>=5.0.0",
    "pyright>=1.1.380",
    "ruff>=0.5.0",
]
streaming = [
    # Required for data_platform/producer/ canonical Kafka producers
    # and data_platform/streaming/flink_jobs/kafka_consumer.py CDC consumer
    "confluent-kafka>=2.8.0",
    "authlib>=1.3.0",     # confluent-kafka schema_registry async client
    "cachetools>=5.3.0",  # confluent-kafka schema_registry async client
    "fastavro>=1.9.0",    # Avro serialisation used by the schema registry serializer
]
observability = [
    "opentelemetry-api>=1.25.0",
    "opentelemetry-sdk>=1.25.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.25.0",
    "opentelemetry-instrumentation-fastapi>=0.46b0",
]
flink = [
    # apache-flink is installed directly in container/flink/Dockerfile via pip3
    # (Python 3.12.4 built from source). Do NOT add it here -- apache-flink
    # 2.2.0 is provisioned in the Flink image for stream jobs.
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"

[tool.coverage.run]
omit = [
    "tests/*",
    "data_platform/batch/*",
    "data_platform/streaming/flink_jobs/kafka_consumer.py",
]

[tool.coverage.report]
fail_under = 40
show_missing = true

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
include = ["ai_systems", "ai_systems.gateway", "ai_systems.alerting", "data_platform", "ai_systems.config", "observability"]
exclude = ["tests", ".venv", "**/__pycache__"]
reportMissingImports = true
reportMissingTypeStubs = false
reportUnusedImport = true
reportUnusedVariable = true
